@@ -16,8 +16,7 @@ License:   Free for any use
 
 BEGIN      =   Literal("BEGIN:").suppress()
 END        =   Literal("END:").suppress()
-str        =   printables + "\xe4\xf6\xe5\xd6\xc4\xc5"
-valstr     =   str + " "
+valstr     =   printables + "\xe4\xf6\xe5\xd6\xc4\xc5 "
 
 EQ         =   Literal("=").suppress()
 SEMI       =   Literal(";").suppress()
@@ -70,7 +69,7 @@ calendars  =   OneOrMore(calendar)
 
 def gotEvent(s,loc,toks):
    for event in toks:
-      print (event['summary'], "from", event["begin"], "to", event["end"])
+      print(event.dump())
 
 event.setParseAction(gotEvent)
 
